test/spec/store.txt
;;; TOOL: run-interp-spec
;;; STDIN_FILE: third_party/testsuite/store.wast
(;; STDOUT ;;;
out/test/spec/store.wast:58: assert_malformed passed:
  out/test/spec/store/store.1.wat:1:30: error: unexpected token "i32.store32", expected an instr.
  (memory 1)(func (param i32) (i32.store32 (local.get 0) (i32.const 0)))
                               ^^^^^^^^^^^
out/test/spec/store.wast:65: assert_malformed passed:
  out/test/spec/store/store.2.wat:1:30: error: unexpected token "i32.store64", expected an instr.
  (memory 1)(func (param i32) (i32.store64 (local.get 0) (i64.const 0)))
                               ^^^^^^^^^^^
out/test/spec/store.wast:73: assert_malformed passed:
  out/test/spec/store/store.3.wat:1:30: error: unexpected token "i64.store64", expected an instr.
  (memory 1)(func (param i32) (i64.store64 (local.get 0) (i64.const 0)))
                               ^^^^^^^^^^^
out/test/spec/store.wast:81: assert_malformed passed:
  out/test/spec/store/store.4.wat:1:30: error: unexpected token "f32.store32", expected an instr.
  (memory 1)(func (param i32) (f32.store32 (local.get 0) (f32.const 0)))
                               ^^^^^^^^^^^
out/test/spec/store.wast:88: assert_malformed passed:
  out/test/spec/store/store.5.wat:1:30: error: unexpected token "f32.store64", expected an instr.
  (memory 1)(func (param i32) (f32.store64 (local.get 0) (f64.const 0)))
                               ^^^^^^^^^^^
out/test/spec/store.wast:96: assert_malformed passed:
  out/test/spec/store/store.6.wat:1:30: error: unexpected token "f64.store32", expected an instr.
  (memory 1)(func (param i32) (f64.store32 (local.get 0) (f32.const 0)))
                               ^^^^^^^^^^^
out/test/spec/store.wast:103: assert_malformed passed:
  out/test/spec/store/store.7.wat:1:30: error: unexpected token "f64.store64", expected an instr.
  (memory 1)(func (param i32) (f64.store64 (local.get 0) (f64.const 0)))
                               ^^^^^^^^^^^
out/test/spec/store.wast:112: assert_invalid passed:
  error: type mismatch in implicit return, expected [i32] but got []
  0000026: error: EndFunctionBody callback failed
out/test/spec/store.wast:116: assert_invalid passed:
  error: type mismatch in implicit return, expected [i64] but got []
  0000026: error: EndFunctionBody callback failed
out/test/spec/store.wast:120: assert_invalid passed:
  error: type mismatch in implicit return, expected [f32] but got []
  0000029: error: EndFunctionBody callback failed
out/test/spec/store.wast:124: assert_invalid passed:
  error: type mismatch in implicit return, expected [f64] but got []
  000002d: error: EndFunctionBody callback failed
out/test/spec/store.wast:128: assert_invalid passed:
  error: type mismatch in implicit return, expected [i32] but got []
  0000026: error: EndFunctionBody callback failed
out/test/spec/store.wast:132: assert_invalid passed:
  error: type mismatch in implicit return, expected [i32] but got []
  0000026: error: EndFunctionBody callback failed
out/test/spec/store.wast:136: assert_invalid passed:
  error: type mismatch in implicit return, expected [i64] but got []
  0000026: error: EndFunctionBody callback failed
out/test/spec/store.wast:140: assert_invalid passed:
  error: type mismatch in implicit return, expected [i64] but got []
  0000026: error: EndFunctionBody callback failed
out/test/spec/store.wast:144: assert_invalid passed:
  error: type mismatch in implicit return, expected [i64] but got []
  0000026: error: EndFunctionBody callback failed
out/test/spec/store.wast:150: assert_invalid passed:
  error: type mismatch in i32.store, expected [i32, i32] but got []
  000001f: error: OnStoreExpr callback failed
out/test/spec/store.wast:159: assert_invalid passed:
  error: type mismatch in i32.store, expected [i32, i32] but got [i32]
  0000021: error: OnStoreExpr callback failed
out/test/spec/store.wast:168: assert_invalid passed:
  error: type mismatch in i32.store, expected [i32, i32] but got []
  0000025: error: OnStoreExpr callback failed
out/test/spec/store.wast:178: assert_invalid passed:
  error: type mismatch in i32.store, expected [i32, i32] but got [i32]
  0000025: error: OnStoreExpr callback failed
out/test/spec/store.wast:188: assert_invalid passed:
  error: type mismatch in i32.store, expected [i32, i32] but got []
  0000025: error: OnStoreExpr callback failed
out/test/spec/store.wast:198: assert_invalid passed:
  error: type mismatch in i32.store, expected [i32, i32] but got [i32]
  0000025: error: OnStoreExpr callback failed
out/test/spec/store.wast:208: assert_invalid passed:
  error: type mismatch in i32.store, expected [i32, i32] but got []
  0000025: error: OnStoreExpr callback failed
out/test/spec/store.wast:218: assert_invalid passed:
  error: type mismatch in i32.store, expected [i32, i32] but got [i32]
  0000025: error: OnStoreExpr callback failed
out/test/spec/store.wast:228: assert_invalid passed:
  error: type mismatch in i32.store, expected [i32, i32] but got []
  0000028: error: OnStoreExpr callback failed
out/test/spec/store.wast:238: assert_invalid passed:
  error: type mismatch in i32.store, expected [i32, i32] but got [i32]
  0000028: error: OnStoreExpr callback failed
out/test/spec/store.wast:248: assert_invalid passed:
  error: type mismatch in i32.store, expected [i32, i32] but got []
  0000025: error: OnStoreExpr callback failed
out/test/spec/store.wast:258: assert_invalid passed:
  error: type mismatch in i32.store, expected [i32, i32] but got [i32]
  0000025: error: OnStoreExpr callback failed
out/test/spec/store.wast:268: assert_invalid passed:
  error: type mismatch in i32.store, expected [i32, i32] but got []
  0000025: error: OnStoreExpr callback failed
out/test/spec/store.wast:278: assert_invalid passed:
  error: type mismatch in i32.store, expected [i32, i32] but got [i32]
  0000025: error: OnStoreExpr callback failed
out/test/spec/store.wast:288: assert_invalid passed:
  error: type mismatch in i32.store, expected [i32, i32] but got []
  0000025: error: OnStoreExpr callback failed
out/test/spec/store.wast:298: assert_invalid passed:
  error: type mismatch in i32.store, expected [i32, i32] but got [i32]
  0000025: error: OnStoreExpr callback failed
out/test/spec/store.wast:308: assert_invalid passed:
  error: type mismatch in i32.store, expected [i32, i32] but got []
  000001f: error: OnStoreExpr callback failed
out/test/spec/store.wast:317: assert_invalid passed:
  error: type mismatch in i32.store, expected [i32, i32] but got [i32]
  0000021: error: OnStoreExpr callback failed
out/test/spec/store.wast:326: assert_invalid passed:
  error: type mismatch in i32.store, expected [i32, i32] but got []
  000001f: error: OnStoreExpr callback failed
out/test/spec/store.wast:335: assert_invalid passed:
  error: type mismatch in i32.store, expected [i32, i32] but got [i32]
  0000021: error: OnStoreExpr callback failed
out/test/spec/store.wast:344: assert_invalid passed:
  error: type mismatch in i32.store, expected [i32, i32] but got []
  0000025: error: OnStoreExpr callback failed
out/test/spec/store.wast:354: assert_invalid passed:
  error: type mismatch in i32.store, expected [i32, i32] but got [i32]
  0000027: error: OnStoreExpr callback failed
out/test/spec/store.wast:364: assert_invalid passed:
  error: type mismatch in i32.store, expected [i32, i32] but got []
  000003c: error: OnStoreExpr callback failed
out/test/spec/store.wast:380: assert_invalid passed:
  error: type mismatch in i32.store, expected [i32, i32] but got [i32]
  000003e: error: OnStoreExpr callback failed
out/test/spec/store.wast:399: assert_invalid passed:
  error: type mismatch in i32.store, expected [i32, i32] but got [f32, i32]
  0000026: error: OnStoreExpr callback failed
out/test/spec/store.wast:400: assert_invalid passed:
  error: type mismatch in i32.store8, expected [i32, i32] but got [f32, i32]
  0000026: error: OnStoreExpr callback failed
out/test/spec/store.wast:401: assert_invalid passed:
  error: type mismatch in i32.store16, expected [i32, i32] but got [f32, i32]
  0000026: error: OnStoreExpr callback failed
out/test/spec/store.wast:402: assert_invalid passed:
  error: type mismatch in i64.store, expected [i32, i64] but got [f32, i32]
  0000026: error: OnStoreExpr callback failed
out/test/spec/store.wast:403: assert_invalid passed:
  error: type mismatch in i64.store8, expected [i32, i64] but got [f32, i64]
  0000026: error: OnStoreExpr callback failed
out/test/spec/store.wast:404: assert_invalid passed:
  error: type mismatch in i64.store16, expected [i32, i64] but got [f32, i64]
  0000026: error: OnStoreExpr callback failed
out/test/spec/store.wast:405: assert_invalid passed:
  error: type mismatch in i64.store32, expected [i32, i64] but got [f32, i64]
  0000026: error: OnStoreExpr callback failed
out/test/spec/store.wast:406: assert_invalid passed:
  error: type mismatch in f32.store, expected [i32, f32] but got [f32, f32]
  0000029: error: OnStoreExpr callback failed
out/test/spec/store.wast:407: assert_invalid passed:
  error: type mismatch in f64.store, expected [i32, f64] but got [f32, f64]
  000002d: error: OnStoreExpr callback failed
out/test/spec/store.wast:409: assert_invalid passed:
  error: type mismatch in i32.store, expected [i32, i32] but got [i32, f32]
  0000026: error: OnStoreExpr callback failed
out/test/spec/store.wast:410: assert_invalid passed:
  error: type mismatch in i32.store8, expected [i32, i32] but got [i32, f32]
  0000026: error: OnStoreExpr callback failed
out/test/spec/store.wast:411: assert_invalid passed:
  error: type mismatch in i32.store16, expected [i32, i32] but got [i32, f32]
  0000026: error: OnStoreExpr callback failed
out/test/spec/store.wast:412: assert_invalid passed:
  error: type mismatch in i64.store, expected [i32, i64] but got [i32, f32]
  0000026: error: OnStoreExpr callback failed
out/test/spec/store.wast:413: assert_invalid passed:
  error: type mismatch in i64.store8, expected [i32, i64] but got [i32, f64]
  000002a: error: OnStoreExpr callback failed
out/test/spec/store.wast:414: assert_invalid passed:
  error: type mismatch in i64.store16, expected [i32, i64] but got [i32, f64]
  000002a: error: OnStoreExpr callback failed
out/test/spec/store.wast:415: assert_invalid passed:
  error: type mismatch in i64.store32, expected [i32, i64] but got [i32, f64]
  000002a: error: OnStoreExpr callback failed
out/test/spec/store.wast:416: assert_invalid passed:
  error: type mismatch in f32.store, expected [i32, f32] but got [i32, i32]
  0000023: error: OnStoreExpr callback failed
out/test/spec/store.wast:417: assert_invalid passed:
  error: type mismatch in f64.store, expected [i32, f64] but got [i32, i64]
  0000023: error: OnStoreExpr callback failed
67/67 tests passed.
;;; STDOUT ;;)
